clusters/vollminlab-cluster/apps/overseerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"overseerr-ingress","namespace":"mediastack"},"spec":{"ingressClassName":"nginx","rules":[{"host":"overseerr.vollminlab.com","http":{"paths":[{"backend":{"service":{"name":"overseerr","port":{"number":5055}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["overseerr.vollminlab.com"],"secretName":"wi [...]
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  creationTimestamp: "2025-01-21T01:11:42Z"
  generation: 1
  name: overseerr-ingress
  namespace: mediastack
  resourceVersion: "186333"
  uid: 479c8b52-f6a3-49f6-9c5f-bd8e96938099
spec:
  ingressClassName: nginx
  rules:
  - host: overseerr.vollminlab.com
    http:
      paths:
      - backend:
          service:
            name: overseerr
            port:
              number: 5055
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - overseerr.vollminlab.com
    secretName: wildcard-tls
status:
  loadBalancer:
    ingress:
    - ip: 192.168.152.244
